# vibemix

./: .gitattributes  .gitignore  .gitleaks.toml  .pinact.yaml  .pre-commit-config.yaml  .secrets.baseline  BRANDING.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  KAAN-ACTION-LEGAL.md  KAAN-PGP-PLACEHOLDER.asc  LICENSE  NOTICE  PRODUCT.md  README.md  SECURITY.md  TRADEMARKS.md  _test_multimodal.py  _test_tts.py  cohost.py  cohost.streaming.py.bak  cohost_lk.py  cohost_v2.py  generate_bat.py  mascot.html  pyproject.toml  run.sh  run_lk.sh  run_v2.sh  test_voice.py  vibemix-core.macos.spec  vibemix-core.windows.spec  vibemix.spec.macos  vibemix.spec.windows
.github/: dependabot.yml  pull_request_template.md  repo-config.yml
.github/ISSUE_TEMPLATE/: ai_misbehavior.yml  bug_report.yml  config.yml  feature_request.yml  new_controller.yml
.github/workflows/: README.md  bundle-id-lock.yml  capabilities-lint.yml  check-slop-e2e.yml  companion-sign.yml  dep-audit.yml  eval.yml  install-rehearsal.yml  issue-triage.yml  mascot-audit.yml  mascot-tauri-only.yml  model-literal-check.yml  no-api-key-surface.yml  orphan-inventory.yml  python-cve.yml  readme-hero-sync.yml  release.yml  rust-cve.yml  sbom.yml  secret-scan.yml  verify-signed.yml
.planning/: HANDOFF-cdj-whisper-v5-ui-migration.md  KAAN-ACTION-LEGAL.md  KAAN-ACTION-PROXY.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  signpath-application.md  v0.1.0-MILESTONE-AUDIT.md  v2.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md  orphans.csv
.planning/decisions/: DEP-OPP-01-obs-browser-source.md  INSTALL-49-companion-fetch.md  P85-OVERRIDE-RETIRED.md  SHIP-CONTACT-VBAUDIO.md
.planning/milestones/: v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md  v3.1-MILESTONE-AUDIT.md  v3.1-REQUIREMENTS.md  v3.1-ROADMAP.md
.planning/notes/: mem0-rejected-2026-05-18.md  v-next-memory-turn.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  questions.md
.planning/seeds/: copilot-memory-layer.md
assets/ack_bank/: manifest.json
docs/: AUDIT.md  SHIP-V1-DECISION-TEMPLATE.md  asset_pipeline.md  bravoh-ops-endpoint.md  day-zero-rota.md  install-rehearsal.md  launch-rotation.md  macos-screencapturekit.md  midi-controllers.md  midi-mapping.md  post-launch-playbook.md  prompt-templates.md  release-process.md  setup-github-repo.md  ship-runbook.md  signing-macos.md  signing-windows.md  signpath-application.md  threat-model.md  updater.md  windows-setup.md
docs/assets/: readme-hero.webm
docs/dep-opportunities/: 2026-05-scan.md
docs/e2e/: .gitkeep  README.md
docs/install/: windows-smartscreen.md
docs/integrations/: obs-browser-source.md
docs/internal/: copy-substitutions.md
docs/launch/: github-meta.md
docs/launch-prep/: AUDIO-CAPTURE.md  DEMO-MODE-CONFIG.md  LAUNCH-SEQUENCE.md  OUTREACH-CALENDAR.md  README.md  SHOT-LIST.md
docs/mascot/: BUNDLE-DECISION.md  README.md
docs/prompts/: tts-tags.md
docs/security/: pgp-public-key.txt
eval/: EAR-TEST-PROTOCOL.md  README.md  THRESHOLD-LOCK.md  THRESHOLD-RECALIBRATION-LOG.md
eval/corpus/: LICENSES.md  MANIFEST.md  manifest.json
eval/ear-test-logs/: schema.json
eval/rubrics/: judge_flash.md  judge_pro.md
installer/companion/: README.md  audio_config.py  driver_manifest.json  fetch_drivers.ps1  fetch_drivers.sh  uninstall.ps1  (+1 more)
mocks/: vibemix-app-ui.html  vibemix-cinematic-storyboard.html  vibemix-direction-explorations.html  vibemix-direction-final.html  vibemix-settings-drawer.html
proxy/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
proxy/app/: __init__.py  auth.py  config.py  main.py  quota.py  upstream.py
proxy/app/middleware/: jwt.py  rate_limit.py
proxy/app/routes/: gemini.py  openai_compat.py  register.py
proxy/tests/: conftest.py  test_app.py  test_auth.py  test_circuit_breaker.py  test_config.py  test_gemini_route.py  test_jwt_middleware.py  test_openai_compat_route.py  test_quota.py  test_quota_integration.py  test_rate_limit.py  test_register.py  test_scaffold.py  test_upstream.py
scripts/: README.md  __init__.py  build_sidecar.py  check_ipc_schema.py  check_mascot_glb_size.sh  check_readme_hero_hash.py  check_v5_copy.sh  check_v5_fonts.sh  check_v5_migration.sh  gen_sine.py  generate_ack_audio.py  generate_placeholder_acks.py  glb_optimize.py  grep_v2_test_names.sh  integration_audit.py  probe_proxy_embed.py  replay_linter.py  reset_first_run.py  sniff_controller.py  spike_gemini_text_ordering.py  tune_detectors.py
spikes/: __init__.py  gemini-3-1-flash-live-music.md
tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  deny.toml  entitlements.macos.plist  entitlements.plist  tauri.conf.json5
tauri/src-tauri/capabilities/: SNAPSHOT.json  default.json
tauri/src-tauri/capabilities-snapshot/: SNAPSHOT.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/keys/: README.md
tauri/src-tauri/scripts/: gen_tray_icons.py
tauri/src-tauri/spike/: .gitignore  Cargo.toml  sign-and-test.sh
tauri/src-tauri/spike/src/: main.rs
tauri/src-tauri/src/: config.rs  debrief_window.rs  djay_ax.rs  hotkey.rs  main.rs  mascot_window.rs  overlay.rs  permissions.rs  recordings.rs  sidecar.rs  tray.rs  updater.rs  wizard_cmds.rs  ws_client.rs
tests/: conftest.py  test_audio_macos.py  test_audio_macos_live.py  test_audio_windows.py  test_audio_windows_live.py  test_license.py  test_main_debrief_flag.py  test_main_live.py  test_main_smoke.py  test_midi_common.py  test_midi_macos.py  test_midi_windows.py  test_midi_windows_live.py  test_package.py  test_phase05_verification.py  test_platform.py  test_platform_selector.py  test_platform_windows_integration.py  test_screen_macos.py  test_screen_windows.py  test_screen_windows_live.py  test_signpath_checklist.py  test_track_macos.py  test_track_windows.py  test_track_windows_live.py
(+1618 files in other folders)
