[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibemix"
version = "0.1.0-dev0"
description = "Open-source AI DJ co-host. Listens, watches, talks back."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Kaan Özkan", email = "oozzxaaii@gmail.com" },
]
keywords = ["dj", "ai", "audio", "midi", "live-performance", "gemini", "livekit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Artistic Software",
]
dependencies = [
    "google-genai>=2.0.1",
    "httpx>=0.28",
    "keyring>=25.7.0",
    "livekit-agents>=1.5.8",
    "livekit-plugins-google>=1.5.8",
    "livekit-plugins-openai>=1.5.8",
    "livekit>=1.1.7",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "mido>=1.3.3",
    "python-rtmidi>=1.5.8",
    # Phase 8: mss is win32-only now. macOS uses ScreenCaptureKit (pyobjc-
    # framework-ScreenCaptureKit, added below); the deprecated
    # ``CGWindowListCreateImageFromArray`` path that mss wraps is obsolete
    # in macOS 15+. ScreenWindows still uses mss on Windows.
    "mss>=10.2.0 ; sys_platform == 'win32'",
    "pillow>=12.2.0",
    "pyjwt>=2.12.1",
    # Phase 11 Wave 0: jsonschema validates ipc.* messages at the Python↔TS
    # boundary against ``tauri/ui/src/ipc/messages.schema.json`` (Draft-07).
    # Validation-only — no model gen (Phase 6 convention bans pydantic).
    "jsonschema>=4.23,<5",
    "websockets>=13.0",
    "python-dotenv>=1.2.2",
    "pyobjc-core>=12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=12.1 ; sys_platform == 'darwin'",
    # Phase 8 Wave 1: ScreenCaptureKit replaces the deprecated
    # ``CGWindowListCreateImageFromArray`` capture path on macOS 12.3+.
    # pyobjc-framework-ScreenCaptureKit ships at the same 12.1 version
    # baseline as the rest of the pyobjc family (verified on PyPI 2026-05).
    "pyobjc-framework-ScreenCaptureKit>=12.1 ; sys_platform == 'darwin'",
    # Phase 11 Wave 4: AVFoundation is required for the calibration wizard's
    # microphone-permission probe (AVCaptureDevice.authorizationStatusForMediaType_
    # + AVCaptureDevice.requestAccessForMediaType_completionHandler_). Same 12.1
    # baseline as the rest of the pyobjc family.
    "pyobjc-framework-AVFoundation>=12.1 ; sys_platform == 'darwin'",
    # Phase 7 Wave 1: Windows-only deps. PyAudioWPatch is the maintained
    # WASAPI-loopback PyAudio fork (Wave 2). pywin32 powers EnumWindows /
    # SMTC FFI (Wave 3). winsdk is Microsoft's official Python winrt
    # bindings (replaces deprecated `winrt`) for SMTC reads (Wave 3).
    # All three are gated on win32 → uv sync skips them on macOS; PyInstaller
    # picks them up automatically on Windows.
    "pyaudiowpatch>=0.2.12 ; sys_platform == 'win32'",
    "pywin32>=308 ; sys_platform == 'win32'",
    # winsdk ships only beta releases on PyPI as of 2026-05 (latest 1.0.0b10).
    # Pin to >=1.0.0b10 so resolver accepts the published beta; production
    # tracks the latest beta until Microsoft graduates to 1.0.0.
    "winsdk>=1.0.0b10 ; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/ozzaii/vibemix"
Repository = "https://github.com/ozzaii/vibemix"
Issues = "https://github.com/ozzaii/vibemix/issues"

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.0",
    "pytest-mock>=3.15.1",
    # Phase 11 Wave 1: PyInstaller bundles the Python sidecar into a
    # ``--onedir`` package for Tauri's ``externalBin`` to spawn. Dev-only —
    # the shipped binary never executes pyinstaller itself.
    "pyinstaller==6.20.0",
]

# Hatchling includes non-Python files inside a package directory by default
# (unlike setuptools), so ``src/vibemix/state/genre/profiles/*.json`` ships
# with the wheel automatically (Phase 6 Wave 1). No explicit ``force-include``
# needed; verified via ``uv build`` + ``unzip -l dist/*.whl | grep .json``.
[tool.hatch.build.targets.wheel]
packages = ["src/vibemix"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"cohost*.py" = ["E", "F", "B", "I", "UP", "RUF"]
"_test_*.py" = ["E", "F", "B", "I", "UP", "RUF"]
"test_voice.py" = ["E", "F", "B", "I", "UP", "RUF"]
"generate_bat.py" = ["E", "F", "B", "I", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "macos_audio: requires BlackHole 2ch present (opt-in smoke test, Plan 05)",
    "windows_only: requires sys.platform == 'win32' — live tests for the Windows port (Phase 7 Wave 3+, executed in Phase 20 CI matrix)",
]
