[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibemix"
version = "0.1.0-dev0"
description = "Open-source AI DJ co-host. Listens, watches, talks back."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Kaan Özkan", email = "oozzxaaii@gmail.com" },
]
keywords = ["dj", "ai", "audio", "midi", "live-performance", "gemini", "livekit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Artistic Software",
]
dependencies = [
    "google-genai>=2.0.1",
    "httpx>=0.28",
    "keyring>=25.7.0",
    "livekit-agents>=1.5.8",
    "livekit-plugins-google>=1.5.8",
    "livekit-plugins-openai>=1.5.8",
    "livekit>=1.1.7",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "mido>=1.3.3",
    "python-rtmidi>=1.5.8",
    # Phase 25 Plan 25-01: pyrekordbox==0.4.4 is the Rekordbox collection.xml
    # parser (XML import path only — SQLCipher path explicitly UNUSED in v2.0
    # per CONTEXT D-01 + LIBRARY-07). pyrekordbox's setup.py hard-pulls
    # sqlcipher3-wheels (3.2 MB binary blob) as an install_requires entry;
    # WAVE-0-DEPS-SPIKE.md verdict locks the --no-deps install path with
    # manual transitives co-declared below. The C-extension load in
    # pyrekordbox.db6.database is guarded by a try/except (database.py:28-34)
    # so the package imports cleanly under the stdlib-sqlite3 fallback.
    #
    # INSTALL RECIPE (encoded as `[tool.uv.sources]` override below — uv
    # respects `--no-deps` semantics by skipping pyrekordbox's metadata
    # install_requires when the source override declares no transitives;
    # vibemix declares the required transitives explicitly):
    "pyrekordbox==0.4.4",
    # pyrekordbox transitive — bidirectional dict for rbxml tag/attr maps
    "bidict==0.23.1",
    # pyrekordbox transitive — ANLZ binary parser (used by .anlz; lazily by .db6)
    "construct==2.10.70",
    # pyrekordbox transitive — required by .db6.database import chain even when
    # SQLCipher dormant (we never call Rekordbox6Database.unlock() in v2.0)
    "SQLAlchemy==2.0.49",
    # pyrekordbox transitive — Rekordbox process discovery in .config
    "psutil==7.2.2",
    # pyrekordbox transitive — date parsing in mysettings + rbxml
    "python-dateutil==2.9.0.post0",
    # NOTE: numpy / packaging / typing_extensions / six are also pyrekordbox
    # transitives but already supplied by existing vibemix deps (numpy>=2.4.4
    # explicit; the rest pulled transitively by SQLAlchemy / python-dateutil).
    # SQLCipher BUNDLE EXCLUSION: sqlcipher3-wheels is intentionally NOT
    # declared anywhere in this file — PyInstaller bundle gate (Phase 21)
    # verifies the binary never lands in dist/. See tests/library/
    # test_pyrekordbox_install.py for the sys.modules dormancy gate.
    #
    # sqlite-vec architectural slot — bundled, NOT exercised in v2.0
    # (LIBRARY-08 + CONTEXT D-08). v2.0 ships text-match lookup only;
    # Gemini Embedding 2 audio space + sqlite-vec ANN search ships v2.1.
    # The pyproject.toml entry is intentionally OMITTED until v2.1 — the
    # STATE.md STACK.md slot reservation is the architectural commitment;
    # shipping the dep lean in v2.0 stays under the 350 MB bundle cap.
    # Phase 8: mss is win32-only now. macOS uses ScreenCaptureKit (pyobjc-
    # framework-ScreenCaptureKit, added below); the deprecated
    # ``CGWindowListCreateImageFromArray`` path that mss wraps is obsolete
    # in macOS 15+. ScreenWindows still uses mss on Windows.
    "mss>=10.2.0 ; sys_platform == 'win32'",
    "pillow>=12.2.0",
    "pyjwt>=2.12.1",
    # Phase 11 Wave 0: jsonschema validates ipc.* messages at the Python↔TS
    # boundary against ``tauri/ui/src/ipc/messages.schema.json`` (Draft-07).
    # Validation-only — no model gen (Phase 6 convention bans pydantic).
    "jsonschema>=4.23,<5",
    "websockets>=13.0",
    "python-dotenv>=1.2.2",
    "pyobjc-core>=12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=12.1 ; sys_platform == 'darwin'",
    # Phase 8 Wave 1: ScreenCaptureKit replaces the deprecated
    # ``CGWindowListCreateImageFromArray`` capture path on macOS 12.3+.
    # pyobjc-framework-ScreenCaptureKit ships at the same 12.1 version
    # baseline as the rest of the pyobjc family (verified on PyPI 2026-05).
    "pyobjc-framework-ScreenCaptureKit>=12.1 ; sys_platform == 'darwin'",
    # Phase 11 Wave 4: AVFoundation is required for the calibration wizard's
    # microphone-permission probe (AVCaptureDevice.authorizationStatusForMediaType_
    # + AVCaptureDevice.requestAccessForMediaType_completionHandler_). Same 12.1
    # baseline as the rest of the pyobjc family.
    "pyobjc-framework-AVFoundation>=12.1 ; sys_platform == 'darwin'",
    # Phase 7 Wave 1: Windows-only deps. PyAudioWPatch is the maintained
    # WASAPI-loopback PyAudio fork (Wave 2). pywin32 powers EnumWindows /
    # SMTC FFI (Wave 3). winsdk is Microsoft's official Python winrt
    # bindings (replaces deprecated `winrt`) for SMTC reads (Wave 3).
    # All three are gated on win32 → uv sync skips them on macOS; PyInstaller
    # picks them up automatically on Windows.
    "pyaudiowpatch>=0.2.12 ; sys_platform == 'win32'",
    "pywin32>=308 ; sys_platform == 'win32'",
    # winsdk ships only beta releases on PyPI as of 2026-05 (latest 1.0.0b10).
    # Pin to >=1.0.0b10 so resolver accepts the published beta; production
    # tracks the latest beta until Microsoft graduates to 1.0.0.
    "winsdk>=1.0.0b10 ; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/ozzaii/vibemix"
Repository = "https://github.com/ozzaii/vibemix"
Issues = "https://github.com/ozzaii/vibemix/issues"

[tool.uv]
# Phase 25 Plan 25-01: pyrekordbox 0.4.4 lists sqlcipher3-wheels as a hard
# install_requires. v2.0 ships XML import path only (CONTEXT D-01 +
# LIBRARY-07 — SQLCipher path UNUSED). Override the transitive with a
# never-matching marker so uv keeps it in the resolved graph (no resolver
# error) but skips it at install time on every real platform. Saves ~3.2 MB
# in the PyInstaller bundle and excludes a C-extension we never execute.
# Verdict + dormancy proof: WAVE-0-DEPS-SPIKE.md.
override-dependencies = [
    "sqlcipher3-wheels; sys_platform == 'never_real_platform_vbm25'",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.0",
    "pytest-mock>=3.15.1",
    # Phase 11 Wave 1: PyInstaller bundles the Python sidecar into a
    # ``--onedir`` package for Tauri's ``externalBin`` to spawn. Dev-only —
    # the shipped binary never executes pyinstaller itself.
    "pyinstaller==6.20.0",
    # Phase 19 Plan 19-01: PyYAML is the loader for .github/repo-config.yml
    # in tests/repo/test_repo_metadata.py + scripts/dist/configure_repo.sh
    # (consumed via `yq` on the shell side; YAML parse on the Python side).
    "pyyaml>=6.0",
    # Phase 27 Plan 27-01 (declared here for Plan 27-02 judges):
    # VCR.py + pytest-recording cache Gemini API calls so PR CI runs at $0.
    # Plan 27-02 uses cassettes under tests/eval/cassettes/ for the 2-judge
    # cross-check tests. Declared in this plan so the manifest is set once.
    "vcrpy>=8.0",
    "pytest-recording>=0.13",
]

# Hatchling includes non-Python files inside a package directory by default
# (unlike setuptools), so ``src/vibemix/state/genre/profiles/*.json`` ships
# with the wheel automatically (Phase 6 Wave 1). No explicit ``force-include``
# needed; verified via ``uv build`` + ``unzip -l dist/*.whl | grep .json``.
[tool.hatch.build.targets.wheel]
packages = ["src/vibemix"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"cohost*.py" = ["E", "F", "B", "I", "UP", "RUF"]
# Phase 19-01: _test_*.py scratch files deleted (CONTEXT Area 5); ignore
# rule removed to keep the config truthful to repo state.
"test_voice.py" = ["E", "F", "B", "I", "UP", "RUF"]
"generate_bat.py" = ["E", "F", "B", "I", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "macos_audio: requires BlackHole 2ch present (opt-in smoke test, Plan 05)",
    "windows_only: requires sys.platform == 'win32' — live tests for the Windows port (Phase 7 Wave 3+, executed in Phase 20 CI matrix)",
    "integration: end-to-end integration tests that spin up real WS servers / clients (Plan 13-08+)",
    "slow: 60-min soak test; runs only via `pytest -m slow` (Phase 15 Plan 06)",
]
