[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibemix-proxy"
version = "0.1.0-dev0"
description = "vibemix FastAPI proxy — keeps the Gemini API key off distributed binaries."
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Kaan Özkan", email = "oozzxaaii@gmail.com" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pyjwt>=2.12.1",
    "slowapi>=0.1.9",
    "redis>=5.0",
    "google-genai>=2.0.1",
    "httpx>=0.28",
    "pydantic>=2.13",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "fakeredis>=2.20",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
